# ChangeLog for app-crypt/ssh-multiadd
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-crypt/ssh-multiadd/ChangeLog,v 1.19 2013/01/05 21:25:19 pinkbyte Exp $

  05 Jan 2013; Sergey Popov <pinkbyte@gentoo.org> metadata.xml:
  Drop proxy maintainers team from metadata, wrt bug #390951

  05 Dec 2012; Jeroen Roovers <jer@gentoo.org> metadata.xml:
  Change maintainer tag (bug #390951).

*ssh-multiadd-1.3.2 (10 Oct 2012)

  10 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> +ssh-multiadd-1.3.2.ebuild:
  Version bump

  10 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> -ssh-multiadd-1.3.1.ebuild,
  -files/ssh-multiadd-1.3.1.diff:
  Drop old revision

  27 Aug 2012; Raúl Porcel <armin76@gentoo.org> ssh-multiadd-1.3.1.ebuild,
  ssh-multiadd-1.3.1-r1.ebuild:
  Drop sparc keywords

  08 Aug 2012; Brent Baude <ranger@gentoo.org> ssh-multiadd-1.3.1-r1.ebuild:
  Marking ssh-multiadd-1.3.1-r1 ppc for bug 418525

  08 Aug 2012; Anthony G. Basile <blueness@gentoo.org>
  ssh-multiadd-1.3.1-r1.ebuild:
  Stable ppc, bug #418525

  08 Aug 2012; Andreas Schuerch <nativemad@gentoo.org>
  ssh-multiadd-1.3.1-r1.ebuild:
  x86 stable, see bug 418525

*ssh-multiadd-1.3.1-r1 (12 Nov 2011)

  12 Nov 2011; Maxim Koltsov <maksbotan@gentoo.org>
  +ssh-multiadd-1.3.1-r1.ebuild, metadata.xml:
  Reassign to python & proxy-maintainers, fix bug #308341. Thanks to idella4

  13 May 2007; Thilo Bangert <bangert@gentoo.org> metadata.xml:
  add herd

  21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  16 May 2006; Cory Visi <visi@gentoo.org> ssh-multiadd-1.3.1.ebuild:
  Keyworded unstable on amd64

  29 Mar 2004; Michael Sterrett <mr_bones_@gentoo.org>
  ssh-multiadd-1.3.1.ebuild:
  inherit eutils for epatch

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*ssh-multiadd-1.3.1 (1 Feb 2002)

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  