@@ -1,6 +1,9 @@
 # ChangeLog for app-crypt/ssh-multiadd
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-crypt/ssh-multiadd/ChangeLog,v 1.19 2013/01/05 21:25:19 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-crypt/ssh-multiadd/ChangeLog,v 1.20 2013/01/14 19:01:54 ago Exp $
+
+  14 Jan 2013; Agostino Sarubbo <ago@gentoo.org> ssh-multiadd-1.3.2.ebuild:
+  Stable for amd64, wrt bug #450182
 
   05 Jan 2013; Sergey Popov <pinkbyte@gentoo.org> metadata.xml:
   Drop proxy maintainers team from metadata, wrt bug #390951
